# NilLex

./: CMakeLists.txt  README.md  analyze.cpp  generateMap.py  jumpComment.cpp  keyWord.txt  result.txt  test.c  test.cpp  testLineRead.cpp
.github/workflows/: ccpp.yml  pythonpackage.yml
data-generator/: generatePunctuation.py  keyWord.txt  punctuation.txt  result.txt  test.c  test.txt
src/: Analyzer.cpp  Analyzer.h  Counter.cpp  Counter.h  FileReader.cpp  FileReader.h  Symbol.cpp  Symbol.h  Utils.cpp  Utils.h  main.cpp
